--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "antd": "^4.4.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "highcharts": "^8.1.2",
+    "highcharts-react-official": "^3.0.0",
     "history": "^5.0.0",
     "layouts": "^3.0.2",
     "lodash": "^4.17.19",
