--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "highcharts": "^8.1.2",
+    "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.0.0",
     "history": "^5.0.0",
     "layouts": "^3.0.2",
